# otus_rust_project

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: calc_info.rs  lib.rs  mod.rs  redis.rs
common/src/models/: calc_info.rs  errors.rs  mod.rs  roles.rs  stats.rs  user_calcs.rs  users.rs
services/: Dockerfile.calc_runner  Dockerfile.tgbot  docker-compose.yml
services/calc_runner/: Cargo.toml
services/calc_runner/src/: app_state.rs  lib.rs  main.rs  models.rs  storage.rs
services/calc_runner/src/api/: errors.rs  get_active_calcs.rs  get_calc_result.rs  get_calc_status.rs  get_user_calcs.rs  mod.rs  run_base_calc.rs  run_mass_calc.rs
services/calc_runner/src/calcs/: base_calc.rs  mass_calc.rs  mod.rs  spawn_calc.rs
services/calc_runner/src/exceptions/: api_errors.rs  mod.rs
services/calc_runner/src/models/: calc_info.rs  stats.rs  user_calcs.rs
services/calc_runner/src/utils/: mod.rs  spawn_calc.rs
services/tgbot/: Cargo.toml
services/tgbot/src/: auth.rs  errors.rs  init.rs  main.rs  settings.rs
services/tgbot/src/commands/: calc.rs  get_active_calcs.rs  get_calc_result.rs  get_calc_status.rs  get_user_calcs.rs  help.rs  mod.rs  run_base_calc.rs  run_mass_calc.rs  start.rs  stats.rs
services/tgbot/src/exceptions/: bot_errors.rs  mod.rs
services/tgbot/src/models/: calc_runner.rs  mod.rs  roles.rs  users.rs
services/tgbot/src/permissions/: max_active_calcs  mod.rs  role  role.rs
