[package]
name = "tgbot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
dotenvy = "0.15"
futures = "0.3"
deadpool-redis = { version = "0.15", features = ["rt_tokio_1"] }
